# wiki-chat

./: .gitignore  Barack Obama.txt  book.txt  docker-compose.yml  inverted_index.json  pyproject.toml  query-vector.json  readme.MD  requirements.txt
app/: article_service.py  book_service.py  chat_context.py  dal.py  main.py  model.py  prompts.py
app/helpers/: index_db_helper.py  n_gram_helper.py  response_helper.py
ui/: README.md  jest.config.ts  nx.json  package-lock.json  package.json  project.json  proxy.conf.json
ui/src/: index.html  main.ts  styles.css
ui/src/chat/: chat.component.css  chat.component.html  chat.component.ts
ui/src/chat-message/: chat-message.component.css  chat-message.component.html  chat-message.component.ts
ui/src/models/: chat-response.ts
ui/src/services/: chat-service.ts
