[project]
name = "wiki-chat"
description = "wiki chat-bot"
version = "0.1.0"

requires-python = ">=3.12"
dependencies = [
    "llama-index",
    "llama-index-llms-ollama",
    "llama-index-embeddings-huggingface",
    "llama-index-vector-stores-chroma",
    "fastapi[standard]",
    "wikipedia-api",
    "scikit-learn"
]